{
  "language": "English",
  "authenticationTranslations": "authenticationTranslations",
  "signUp": "Sign Up",
  "signIn": "Sign In",
  "alreadyHaveAnAccount": "Already have an account",
  "authentication": "Authentication",
  "login": "login",
  "appSloganMain": "A new way to enjoy the EPL.",
  "appSloganSub": "Join our community",
  "forgotPassword": "Forgot Password ?",
  "dontHaveAnAccount": "Don't have an account ?",
  "resetPassword": "Reset Password",
  "resetInfoLine": "Input your email so we can send reset your password",
  "labelTranslations": "labelTranslations",
  "email": "Email",
  "userName": "User Name",
  "teamName": "Team Name",
  "password": "Password",
  "confirmPassword": "Confirm Password",
  "team": "Team",
  "transfers": "Transfers",
  "transfer": "Transfer",
  "cancelTransfer": "Cancel Transfer",
  "fixtures": "Fixtures",
  "league": "League",
  "stats": "Stats",
  "currentLanguage": "Language",
  "title_fixture": "FIXTURE TRANSLATIONS",
  "gameWeek": "GameWeek",
  "checkConn": "Check Your Internet Connection",
  "teamSaved": "Team Saved",
  "retry": "Retry",
  "cancel": "Cancel",
  "save": "Save",
  "chipConfirmation": " Chip about to be activated. Confirm?",
  "playerInfo": "Player Information",
  "switchPlayer": "Switch Player",
  "makeCaptain": "Make Captain",
  "makeViceCaptain": "Make Vice-captain",
  "gk": "GK",
  "def": "DEF",
  "mid": "MID",
  "att": "ATT",
  "chips": "Chips",
  "tc": "Triple Captian",
  "bb": "Bench Boost",
  "fh": "Free Hit",
  "wc": "Wildcard",
  "notificationTranslation": "notificationTranslation",
  "noConnection": "No Connection",
  "couldNotContactTheServer": "Could not contact the server",
  "pleaseCheckYourConnection": "Please check your connection",
  "pleaseLogin": "Please Login",
  "couldNotVerify": "Could not verify",
  "pleaseLoginAndTryAgain": "Please login and try again",
  "somethingWentWrong": "Something went wrong",
  "noTeamSelected": "No Team Selected",
  "pleaseSelectYourInitialTeam": "Please select your initial team! It's on us!",
  "priceLimitExceeded": "Price Limit Exceeded",
  "theTeamYouHaveSelectedExceedsTheLimit": "The team you have selected exceeds the limit",
  "playersFromTeam": "Players from Team",
  "youHaveSelectedMoreThanPlayersFrom": "You have selected more than 3 players from",
  "incompleteTeam": "Incomplete Team",
  "theTeamYouHaveSelectedIsIncomplete": "The Team you have selected is incomplete",
  "transfersTranslations": "Transfers_Translations",
  "bank": "Bank",
  "deduction": "Deduction",
  "freeTransfers": "Free Transfers",
  "deadline": "Deadline",
  "transferList": "Transfer List",
  "selectTeam": "Select a Team",
  "availableInjury": "Available",
  "unavailableInjury": "Unavailable",
  "all": "All",
  "minimumPrice": "Min",
  "maximumPrice": "Max",
  "player": "Player",
  "price": "Price",
  "points": "Points",
  "confirmTransfers": "Confirm Transfers",
  "cancelTransfers": "Cancel Transfers",
  "theseTransfersWillBeActiveFor": "These transfers will be active for",
  "and": "and",
  "noPoints": "no points",
  "noWillBeDeductedFromYourScore": "will be deducted from your score.",
  "willBeDeductedFromYourScore": "will be deducted from your score.",
  "wildcardAlreadyPlayed": "Wildcard already played",
  "playWildCard": "Play WildCard",
  "freeHitAlreadyPlayed": "Free Hit Already Played",
  "playFreeHit": "Play Free Hit",
  "fixturesTranslation": "Fixtures_Translation",
  "noFixtures": "No Fixtures",
  "modalTranslations": "modalTranslations",
  "playerInformation": "Player Information",
  "upcomingFixtures": "Upcoming Fixtures",
  "pointsTranslation": "pointsTranslation",
  "statistic": "Statistic",
  "value": "Value",
  "pts": "Pts",
  "minutesPlayed": "Minutes Played",
  "goals": "Goals",
  "assists": "Assists",
  "yellows": "Yellows",
  "reds": "Red",
  "penaltyMissed": "Penalty Missed",
  "ownGoal": "Own Goal",
  "saves": "Saves",
  "penaltySaved": "Penalty Saved",
  "cleanSheet": "Clean Sheet",
  "sum": "Total Sum",
  "watchListTranslations": "Watch List",
  "yourWatchList": "Your Watch List",
  "addToWatchList": "Add To WatchList",
  "removeFromWatchList": "Remove From WatchList",
  "summary": "Summary",
  "efplStatsTranslation": "EFPL STATS Translation",
  "efplStats": "EFPL Stats",
  "highestPoints": "Highest Points",
  "averagePoints": "Average Points",
  "mostSelected": "Most Selected",
  "mostTransferredOut": "Most Transferred Out",
  "mostCaptained": "Most Captained",
  "mostViceCaptained": "Most Vice Captained",
  "benchBoostPlayed": "Bench Boost Played",
  "freeHitPlayed": "Free Hit Played",
  "wildcardsPlayed": "Wildcards Played",
  "tripleCaptainPlayed": "Triple Captain Played",
  "dreamTeam": "Dream Team",
  "most": "Most",
  "cleanSheets": "Clean Sheets",
  "selectATeam": "Select a Team",
  "showCaseTranslations": "Show Case Translations",
  "bankKeyTitle": "Remaining Money",
  "bankKeyDesc": "The amount of money left after building your team.",
  "searchBarKeyTitle": "Search For Player",
  "searchBarDesc": "Enter a query to search for a player based on that query.",
  "teamFilterKeyTitle": "Filter By Team",
  "teamFilterKeyDesc": "Filter players based on the team they play for.",
  "injuryFilterKeyTitle": "Filter By Injury",
  "injuryFilterKeyDesc": "Filter players based on their injury status.",
  "minPriceKeyTitle": "Minimum Price",
  "minPriceKeyDesc": "The minimum cost to filter a player by.",
  "sliderKeyTitle": "Price Slider",
  "sliderKeyDesc": "Price range adjuster to filter players by price.",
  "maxPriceKeyTitle": "Maximum Price",
  "maxPriceKeyDesc": "The maximum cost to filter a player by.",
  "playerNameSortKeyTitle": "Sorter by Name",
  "playerNameSortKeyDesc": "Sort player list by alphabetically player name.",
  "playerPriceSortKeyTitle": "Sorter by Price",
  "playerPriceSortKeyDesc": "Sort player list by player price.",
  "playerPointSortKeyTitle": "Sorter by Points",
  "playerPointSortKeyDesc": "Sort player list by sum of total sum of point.",
  "playerCardKeyTitle": "Player Info",
  "playerCardKeyDesc": "All required information of a player",
  "myTeamTabKeyTitle": "My Team",
  "myTeamTabKeyDesc": "View your team, set captain and vice captain. Play chips like wildcard, free hit and triple captain. Swap players between bench and starter.",
  "pointsTabKeyTitle": "Points",
  "pointsTabKeyDesc": "View your team's achieved point, chips played and sum points gained by all your players. View each player's in game achievement.",
  "transfersTabKeyTitle": "Transfers",
  "transfersTabKeyDesc": "Transfer players in and out from the transfer market for next gameweek. View remaining amount in bank and deducted point.",
  "fixturesTabKeyTitle": "Fixtures",
  "fixturesTabKeyDesc": "View upcoming and past fixtures, their score, their schedule and lineup. View goals scored, assists made and cards received by players.",
  "leaguesTabKeyTitle": "Leagues",
  "leaguesTabKeyDesc": "View all the leagues you are a member of and all the members of those leagues.",
  "statsTabKeyTitle": "EPL Stats",
  "statsTabKeyDesc": "View top scorers, assisters, clean sheets,received cards and saves by Ethiopian Premier League players.",
  "settingTabKeyTitle": "Settings",
  "settingsTabKeyDesc": "Change your set preferences such as language and more information.",
  "tableTranslations": "Table Translations",
  "standings": "Standings",
  "epl": "EFPL",
  "pos": "Pos",
  "club": "Club",
  "p": "P",
  "w": "W",
  "d": "d",
  "l": "L",
  "gd": "GD",
  "monthsTranslations": "MonthTranslations",
  "january": "January",
  "february": "February",
  "march": "March",
  "april": "April",
  "may": "May",
  "june": "June",
  "july": "July",
  "august": "August",
  "september": "September",
  "october": "October",
  "november": "November",
  "december": "December",
  "cityTranslations": "CityTranslations",
  "addisAbaba": "Addis Ababa",
  "wolaitaSodo": "Wolaita Sodo",
  "hawassa": "Hawassa",
  "gondar": "Gondar",
  "adama": "Adama",
  "sidama": "Sidama",
  "bahirDar": "Bahir Dar",
  "wolkite": "Wolkite",
  "arbaMinch": "Arba Minch",
  "hosaena": "Hosaena",
  "direDawa": "Dire Dawa",
  "jimma": "Jimma",
  "sebeta": "Sebeta",
  "stadiumTranslations": "Stadium Translations",
  "sebetaStadium": "Sebeta Stadium",
  "jimmaStadium": "Jimma Stadium",
  "addisAbabaStadium": "Addis Ababa Stadium",
  "direDawaStadium": "Dire Dawa Stadium",
  "abiyHersamoStadium": "Abiy Hersamo Stadium",
  "arbaMinchStadium": "Arba Minch Stadium",
  "wolkiteStadium": "Wolkite Stadium",
  "bahirDarStadium": "Bahir Dar Stadium",
  "hawasaMetropolitanStadium": "Hawasa Metropolitan Stadium",
  "abebeBikilaStadium": "Abebe Bikila Stadium",
  "fasiledesStadium": "Fasiledes Stadium",
  "awassaKenemaStadium": "Awassa Kenema Stadium",
  "wolaitaSodoStadium": "Wolaita Sodo Stadium",
  "lineUps": "Line Ups",
  "events": "Events"
}
