...
  "Contact Us": "ጥያቄ ካሎት",
  "Contact Page": "መገናኛ ገጽ",
  "Email": "አድራሻ",
  "select email": "ሚሉኩበት አድራሻ",
  "subject": "ጉዳዩ",
  "submit": "ያስገቡ",
  "Back": "ይመለሱ",
  "Dev -1": "ገንቢ -1",
  "Dev -2": "ገንቢ -2",
  "Logout": "ከመተግበሪያን ውጣ",
  "Login": "ወደ መተግበሪያ ግባ",
  "Login Page": "መግብያ ገጽ",
  "Select language": "ቋንቋ ይምረጡ",
...
